--- a/ExpensesTracker/app/src/main/res/values/strings.xml
+++ b/ExpensesTracker/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="per_week">Per Week</string>
     <string name="per_month">Per Month</string>
     <string name="initial_budget">Initial Budget</string>
+    <string name="submit">Submit</string>
 
 </resources>
